--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+
 html {
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
@@ -94,10 +95,10 @@ nav .container ul li.active a {
 
 .galeria {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-  padding: 20px;
-  background-color: #fff;
+  grid-template-rows: 200px 200px 200px;
+  grid-template-columns: 420px 420px 420px;
+  gap: 15px;
+  margin-top: 45px;
 }
 
 .galeria-item {
@@ -112,6 +113,10 @@ nav .container ul li.active a {
   max-width: 100%;
   height: auto;
   display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #AAA;
 }
 
 .galeria-item:hover {
