--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,29 @@ section {
   justify-content: center;
   width: 100%;
 }
+.logo {
+  display: flex;
+  align-items: center;
+  margin: 0 10px; 
+}
+
+.logo img {
+  max-width: 80px; 
+}
+.social-icons {
+  position: fixed;
+  top: 20px; 
+  right: 20px; 
+  display: flex;
+  flex-direction: row;
+}
+
+.social-icons a {
+  color: #e4405f;
+  font-size: 24px;
+  margin-left: 20px; 
+  text-decoration: none;
+}
 
 #page1 {
   background-image: url("/assets/img/fundo.jpg");
