--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,10 +117,10 @@ nav .container ul li.active a {
 
 .galeria {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px;
-  padding: 20px;
-  background-color: #fff;
+  grid-template-rows: 200px 200px 200px;
+  grid-template-columns: 420px 420px 420px;
+  gap: 15px;
+  margin-top: 45px;
 }
 
 .galeria-item {
@@ -132,11 +132,137 @@ nav .container ul li.active a {
 }
 
 .galeria-item img {
-  max-width: 100%;
+  width: 100%;
+  height: auto;
   height: auto;
   display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #AAA;
+  margin-top: -110px;
 }
 
 .galeria-item:hover {
   transform: scale(1.05);
+}
+
+.blog-title {
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.blog {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.blog-columns {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.blog-post {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  margin-bottom: 20px;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.blog-post h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.blog-post p {
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.blog-post a {
+  color: #e4405f;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.blog-post a:hover {
+  color: #d6334c;
+}
+
+.contact-form {
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+.contact-form h2 {
+
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.contact-form input[type="text"],
+.contact-form input[type="email"],
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.contact-form textarea {
+  height: 150px;
+}
+
+.contact-form button {
+  background-color: #e4405f;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.contact-form button:hover {
+  background-color: #4e2b30;
+}
+
+.footer-content {
+
+  margin-top: 250px;
+  background-color: #777676;
+  padding: 20px;
+  text-align: center;
+}
+
+.contact-info {
+  margin-bottom: 15px;
+  font-size: 15px;
+  font-weight: 200;
+  color: #333;
+
+}
+
+.back-to-home a {
+  color: #e4405f;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.back-to-home a:hover {
+  color: #d6334c;
 }
